examples/test/testpolicy18228.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18228
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key0: value8
      key3: value13
      key18: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value39
      podSelector:
        matchLabels:
          key6: value46
          key34: value10
